Some fixes for the dark mode

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -266,6 +266,11 @@ select:focus {
   gap: 1rem;
 }
 
+.card__logo {
+  width: 3.75rem;
+  height: 3.75rem;
+}
+
 .card__title {
   font: var(--txt-preset-2);
   color: var(--clr-neutral-900);
@@ -518,4 +523,10 @@ select:focus {
 
 .dark .extensions__title {
   color: var(--clr-neutral-0);
+}
+
+.disable-transitions *, 
+.disable-transitions *::before, 
+.disable-transitions *::after {
+  transition: none !important;
 }
